<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_btn">Login</string>
    <string name="user_name_txt">User name:</string>>
    <string name="password_txt">Password:</string>
    <string name="usename_hint">Add your username</string>
    <string name="password_hint">Add your password</string>
</resources>
