<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.login.LoginFragment"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username_text"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginTop="48dp"
                android:text="@string/user_name_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text" />

            <EditText
                android:id="@+id/username_tv"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginEnd="@dimen/margin_wide"
                android:hint="@string/usename_hint"
                app:layout_constraintBaseline_toBaselineOf="@+id/username_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/username_text" />

            <TextView
                android:id="@+id/password_text"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginTop="24dp"
                android:text="@string/password_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_tv" />

            <EditText
                android:id="@+id/password_tv"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginEnd="@dimen/margin_wide"
                android:hint="@string/password_hint"
                app:layout_constraintBaseline_toBaselineOf="@+id/password_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/password_text" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>